--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,6 +42,11 @@ jobs:
         with:
           package_root: ./tests/test_package
 
+      - run:   echo "$OUTPUTS"
+        shell: bash
+        env:
+         OUTPUTS: ${{ toJSON(steps.run_default_test.outputs) }}
+
       - name: Fail if default test not ran
         shell: bash
         if: steps.run_default_test.outputs.package_test_ran != 1
@@ -53,6 +58,11 @@ jobs:
         with:
           test_name: specific
           package_root: ./tests/test_package
+
+      - run:   echo "$OUTPUTS"
+        shell: bash
+        env:
+         OUTPUTS: ${{ toJSON(steps.run_specific_test.outputs) }}
 
       - name: Fail if the specific test not ran
         shell: bash
