test: more debug output

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         houdini-version:
           - "19.5"  # Python 3.9
-          - "20.0"  # Python 3.10
+          # - "20.0"  # Python 3.10
 
     container:
       image: captainhammy/hython-runner:${{ matrix.houdini-version }}
