--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,11 +23,11 @@ jobs:
 
       # Unit Tests
 
-      - name: Install unit test dependencies
-        run: python -m pip install tox tox-gh-actions
+#      - name: Install unit test dependencies
+#        run: python -m pip install tox tox-gh-actions
 
-      - name: Test with tox
-        run: tox
+#      - name: Test with tox
+#        run: tox
 
       # Integration tests
 
