test: more debug output

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,6 +47,10 @@ jobs:
         env:
          OUTPUTS: ${{ toJSON(steps.run_default_test.outputs) }}
 
+      - name: what is output?
+        run: echo $GITHUB_OUTPUT
+        shell: bash
+
 #      - name: Fail if default test not ran
 #        shell: bash
 #        if: steps.run_default_test.outputs.package_test_ran != 1
