--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,8 +42,10 @@ jobs:
         with:
           package_root: ./tests/test_package
 
-      - run:   echo ${{ toJSON(steps.run_default_test.outputs) }}
+      - run:   echo "$OUTPUTS"
         shell: bash
+        env:
+         OUTPUTS: ${{ toJSON(steps.run_default_test.outputs) }}
 
       - name: what is output?
         run: echo $GITHUB_OUTPUT
